Fix collapsed menu height

--- a/css/main.scss
+++ b/css/main.scss
@@ -372,4 +372,8 @@ header .header-content {
     .collapse.in{
         display:block !important;
     }
+
+	.navbar-fixed-bottom .navbar-collapse, .navbar-fixed-top .navbar-collapse {
+		max-height: 400px;
+	}
 }
